--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -11,3 +11,85 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.navbar-inverse .navbar-brand {
+    color: #D6AA01;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #D6AA01;
+}
+
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, h1, h2, h3, h4, h5, h6 {
+    color: #D6AA01;
+}
+
+section header {
+    text-align: center;
+    border-bottom: 1px solid #D6AA01;
+    margin-bottom: 20px;
+}
+
+section header h3 {
+    margin-bottom: 0;
+    text-transform: uppercase;
+}
+
+section h4 {
+    text-transform: uppercase;
+}
+
+article header {
+    text-align: center;
+}
+
+article header h2 {
+    text-transform: uppercase;
+    border-bottom: 1px solid #D6AA01;
+    margin-bottom: 0;
+}
+
+.page-header {
+    border-bottom: 1px solid #D6AA01;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+nav {
+    text-transform: uppercase;
+}
+
+footer {
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #D6AA01;
+    color: black;
+}
+
+.btn-default {
+    color: #FDFDFD;
+    background-color: #000000;
+    border-color: #D6AA01;
+}
+
+input[type=text] {
+    background-color: #D6AA01;
+    border-color: #D6AA01;
+    color: #000000;
+}
+
+input[type=text]::-webkit-input-placeholder {
+    color: #000000;
+}
+*:-moz-placeholder {
+    /* FF 4-18 */
+    color: #000000;
+}
+*::-moz-placeholder {
+    /* FF 19+ */
+    color: #000000;
+}
+*:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #000000;
+}
