changed bg & well colors

--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -5,6 +5,7 @@
  */
 
 body {
+    background-color: #333230;
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
@@ -22,6 +23,10 @@ footer {
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, h1, h2, h3, h4, h5, h6 {
     color: #D6AA01;
+}
+
+.well {
+  background-color: #3E3122;
 }
 
 section header {
@@ -54,6 +59,8 @@ article header h2 {
     text-align: center;
     text-transform: uppercase;
 }
+
+
 
 nav {
     text-transform: uppercase;
