--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -31,6 +31,10 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, h1, h2, h3, h4, h5, h6 {
   border: none;
 }
 
+.thumbnail {
+  border: 1px solid #D6AA01
+}
+
 section header {
     text-align: center;
     border-bottom: 1px solid #D6AA01;
