--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -86,13 +86,13 @@ footer {
     border-color: #D6AA01;
 }
 
-input[type=text] {
+input[type=email] {
     background-color: #D6AA01;
     border-color: #D6AA01;
     color: #000000;
 }
 
-input[type=text]::-webkit-input-placeholder {
+input[type=email]::-webkit-input-placeholder {
     color: #000000;
 }
 *:-moz-placeholder {
