--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -5,6 +5,7 @@
  */
 
 body {
+    font-family: 'Open Sans', sans-serif;
     background-color: #0D0B00;
     color: #FFFDF3;
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
